--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -34,5 +34,5 @@ jobs:
 
     - name: Test
       run: |
-        python -m pip install pytest h5py
+        python -m pip install pytest h5py mock flake8-pyproject file-writer-control python-on-whales
         python -m pytest
