--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -29,5 +29,5 @@ jobs:
 
     - name: Test
       run: |
-        python -m pip install pytest
+        python -m pip install pytest mock
         python -m pytest
